force-app/main/default/objects/encompass_By_EM__Error_Log__c/encompass_By_EM__Error_Log__c.object-meta.xml
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>