force-app/main/default/objects/encompass_By_EM__Error_Log__c/fields/encompass_By_EM__Dump__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Dump__c</fullName>
    <label>Dump</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>