force-app/main/default/objects/encompass_By_EM__Error_Log__c/fields/encompass_By_EM__Encompass_User_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Encompass_User_Id__c</fullName>
    <label>Encompass User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>