force-app/main/default/objects/encompass_By_EM__Error_Log__c/fields/encompass_By_EM__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>