force-app/main/default/objects/encompass_By_EM__Error_Log__c/fields/encompass_By_EM__Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>