force-app/main/default/objects/encompass_By_EM__Error_Log__c/fields/encompass_By_EM__Location__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>