force-app/main/default/objects/encompass_By_EM__Error_Log__c/listViews/Active_Errors.listView-meta.xml
<ListView>
    <fullName>Active_Errors</fullName>
    <columns>NAME</columns>
    <columns>encompass_By_EM__Encompass_User_Id__c</columns>
    <columns>encompass_By_EM__Loan_Id__c</columns>
    <columns>encompass_By_EM__Error_Message__c</columns>
    <columns>encompass_By_EM__Type__c</columns>
    <columns>encompass_By_EM__Sync_Progress__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Resolved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Errors</label>
</ListView>