force-app/main/default/objects/encompass_By_EM__Error_Log__c/listViews/encompass_By_EM__All.listView-meta.xml
<ListView>
    <fullName>encompass_By_EM__All</fullName>
    <columns>NAME</columns>
    <columns>encompass_By_EM__Encompass_User_Id__c</columns>
    <columns>encompass_By_EM__Loan_Id__c</columns>
    <columns>encompass_By_EM__Error_Message__c</columns>
    <columns>encompass_By_EM__Type__c</columns>
    <columns>encompass_By_EM__Sync_Progress__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Resolved__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>